completely refurbished I2C diagnostics code
- removed diagnostics subdirectory and files were distributed into
appropriate directories of the main project

- updated COE python script such, that it not only generates COE file,
but as well full systemverilog ROM

- instead of embedding Xilinx BRAM to store the data now the design
uses pll_rom.sv, which is generated by the above python script

- modified TCL scripts to cope with all the changes

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,7 @@
 [submodule "modules/zynq_usplus_gbt_fpga"]
 	path = libs/zynq_usplus_gbt_fpga
 	url = ssh://git@gitlab.cern.ch:7999/personal-digital-lib/zynq_usplus_gbt_fpga.git
+[submodule "scripts/pyloggingformatter"]
+	path = scripts/pyloggingformatter
+	url = ssh://git@gitlab.cern.ch:7999/mcoi/pyloggingformatter.git
+	branch = master
