compilation of the libraries and attempt to create application elf - not working yet

--- a/fw/Makefile
+++ b/fw/Makefile
@@ -34,10 +34,9 @@ PLATFORM := mcoi_platform
 
 ROOT := $(PWD)
 HW := $(ROOT)/../syn/exported_hw.xsa
-USER_SRC := $(ROOT)/src
-USER_LIBS := $(ROOT)/libs
-OUTPUT := $(ROOT)/bin
 BUILD := $(ROOT)/build
+USER_SOURCE := $(ROOT)/src
+USER_INCLUDES := $(ROOT)/include
 BSP_INCLUDES := $(BUILD)/bsp_include
 BSP_SOURCES := $(BUILD)/bsp_sources
 BSP_ASM := $(BUILD)/bsp_asm
@@ -45,27 +44,20 @@ BSP_ASM := $(BUILD)/bsp_asm
 BSP_SRCS := $(wildcard $(BSP_SOURCES)/*.c)
 BSP_OBJS := $(BSP_SRCS:.c=.o)
 
-PMU_DIR := $(BUILD)/zynqmp_pmufw
-FSBL_DIR := $(BUILD)/zynqmp_fsbl
-HW_DIR := $(BUILD)/hw
-
 LD := lscript.ld
 LD_FLAGS := -Wl,--start-group,-lxil,-lgcc,-lc,--end-group
 
-ASM_OBJ := $(BUILD)/asm_obj
-C_OBJ := $(BUILD)/c_obj
+USER_SOURCES=$(wildcard $(USER_SOURCE)/*.c)
+OBJS=$(USER_SOURCES:.c=.o) 
+INCLUDES = -I $(BSP_INCLUDES) \
+		   -I $(USER_INCLUDES)
 
 # generated paths by the xsct tool, and 
 # we want to place them to our own paths
 XS_DIR_NAMES := zynqmp_pmufw zynqmp_fsbl hw
-XILINX_PATHS := $(addprefix $(BUILD)/, $(XS_DIR_NAMES)) 
 
-# ASM_SOURCES := $(PMU_DIR)/**/libs
-# C_SOURCES := $(wildcard)
-
-# check if you have arm-gcc in 
-# the PATHS and the correct version
-# and create BUILD directory
+# check if you have arm-gcc in the PATHS and the 
+# correct version and create BUILD directory
 $(BUILD): 
 	@which $(XS) &> /dev/null || { \
 		printf '\e[1;31m[ERR]\e[0m $(XS) command is not in PATH'; false; };
@@ -81,41 +73,45 @@ $(BUILD)/$(PLATFORM): $(HW) | $(BUILD)
 	@$(XS) -eval 'platform create -name $(PLATFORM) -out $@/../  -hw $(HW)'; \
 		rm -rf $@/platform.spr; \
 		rm -rf $@/logs; \
-		mkdir $(BSP_INCLUDES) $(BSP_SOURCES) $(BSP_ASM); \
-		cp $(BUILD)/$(PLATFORM)/zynqmp_fsbl/zynqmp_fsbl_bsp/psu_cortexa53_0/include/*.h $(BSP_INCLUDES); \
-		cp $(BUILD)/$(PLATFORM)/zynqmp_fsbl/zynqmp_fsbl_bsp/psu_cortexa53_0/libsrc/**/src/*.h $(BSP_INCLUDES); \
-		cp $(BUILD)/$(PLATFORM)/zynqmp_fsbl/zynqmp_fsbl_bsp/psu_cortexa53_0/libsrc/standalone_v8_0/src/includes_ps/platform/ZynqMP/*.h $(BSP_INCLUDES); \
-		cp $(BUILD)/$(PLATFORM)/zynqmp_fsbl/zynqmp_fsbl_bsp/psu_cortexa53_0/libsrc/**/src/*.c $(BSP_SOURCES); \
-		cp $(BUILD)/$(PLATFORM)/zynqmp_fsbl/zynqmp_fsbl_bsp/psu_cortexa53_0/libsrc/**/src/*.S $(BSP_ASM);
+		mkdir $(BSP_INCLUDES) $(BSP_SOURCES) $(BSP_ASM);
+	@cp $(BUILD)/$(PLATFORM)/zynqmp_fsbl/zynqmp_fsbl_bsp/psu_cortexa53_0/include/*.h $(BSP_INCLUDES); 
+	@cp $(BUILD)/$(PLATFORM)/zynqmp_fsbl/zynqmp_fsbl_bsp/psu_cortexa53_0/libsrc/**/src/*.h $(BSP_INCLUDES);
+	@cp $(BUILD)/$(PLATFORM)/zynqmp_fsbl/zynqmp_fsbl_bsp/psu_cortexa53_0/libsrc/**/src/*.c $(BSP_SOURCES);
+	@cp $(BUILD)/$(PLATFORM)/zynqmp_fsbl/zynqmp_fsbl_bsp/psu_cortexa53_0/libsrc/**/src/*.S $(BSP_ASM);
 
 $(BSP_SOURCES)/%.o: $(BSP_SOURCES)/%.c
 	@echo 'Building file: $<'
-	arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"$@" \
-		-march=$(DEVICE) -mfpu=$(FPU) -mfloat-abi=hard \
-		-I $(BSP_INCLUDES) -MMD -MP -MF"$(@:%.o=%.d)" -MT"$(@)" -o "$@" "$<"
+	aarch64-none-elf-gcc -I $(BSP_INCLUDES) -c -g -Wall -Wextra \
+		-fno-tree-loop-distribute-patterns \
+		-Os -flto -ffat-lto-objects -I $(BSP_INCLUDES) -MMD -MP $< -o $@ 
 	@echo 'Finished building: $<'
 
-test: $(BUILD)/$(PLATFORM) $(BSP_OBJS)
-	@echo "THIS IS THE END" 
+$(USER_SOURCE)/%.o: $(USER_SOURCE)/%.c
+	@echo 'Building file: $<'
+	@echo 'Invoking: ARM v8 32 Bit gcc compiler'
+	arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"$@" \
+		-march=armv7-a -mfpu=vfpv3 -mfloat-abi=hard $(INCLUDES) \
+		-MMD -MP -MF"$(@:%.o=%.d)" -MT"$(@)" -o "$@" "$<"
+	@echo 'Finished building: $<'
 
-# # the pipe is needed to not recreate the 
-# # directory when its content is updated
-# $(OUTPUT)/$(TARGET).elf: _check_compatibility $(OBJS) $(LD) | $(BUILD)
-# 	@echo 'Building target: $@'
-# 	$(CC) -march=$(TARGET) \
-# 		-mfpu=$(FPU) \
-# 		-mfloat-abi=hard \
-# 		-Wl, -T -Wl,$(LD) \
-# 		-L $(LIBS) \
-# 		-o $@ \
-# 		$(LD_GROUPS) \
-# 		$(OBJS)
+# $(BUILD)/$(PLATFORM) $(LD) $(BSP_OBJS) $(USER_SOURCE)
+$(TARGET).elf: $(OBJS) $(BSP_OBJS) $(LD)
+	@echo 'Building target: $@'
+	@echo 'Invoking: ARM v8 32 Bit gcc linker'
+	arm-none-eabi-gcc -march=$(DEVICE) \
+		-mfpu=vfpv3 -mfloat-abi=hard -Wl,-T -Wl,$(LD) -L $(BSP_OBJS) -o $@ \
+		-Wl,--start-group,-lxil,-lgcc,-lc,--end-group
+	@echo 'Finished building target: $@'
+
+test: $(BUILD)/$(PLATFORM) $(BSP_OBJS) $(OBJS)
+	@echo $(USER_SOURCES)
+	@echo $(OBJS)
+	@echo "THIS IS THE END" 
 
 clean:
 	@rm -rf $(BUILD)
 	@rm -rf .Xil
 
-#TODO upload the fw project to vitis and generate the cproject files
-#TODO try to run the basic application configuring the PLL
-
 .PHONY: clean
+
+#TODO add target to create fsbl_a53.elf
