now the makefile compiles the target - has to be ran twice

--- a/fw/Makefile
+++ b/fw/Makefile
@@ -23,13 +23,11 @@
 ## @date: 13 July 2023 
 ##-----------------------------------------------------------------------------
 
-CC := arm-none-eabi-gcc
+CC := aarch64-none-elf-gcc
 XS := xsct
 
-GCCVERSION := $$(arm-none-eabi-gcc --version | head -n1 | sed -e "s/[^0-9]\+\s\+\(.*\)/\1/")
+GCCVERSION := $$($(CC) --version | head -n1 | sed -e "s/[^0-9]\+\s\+\(.*\)/\1/")
 TARGET := mcoi_app
-DEVICE := armv7-a
-FPU := vfpv3
 PLATFORM := mcoi_platform
 
 ROOT := $(PWD)
@@ -41,20 +39,25 @@ BSP_INCLUDES := $(BUILD)/bsp_include
 BSP_SOURCES := $(BUILD)/bsp_sources
 BSP_ASM := $(BUILD)/bsp_asm
 
-BSP_SRCS := $(wildcard $(BSP_SOURCES)/*.c)
-BSP_OBJS := $(BSP_SRCS:.c=.o)
-
 LD := lscript.ld
 LD_FLAGS := -Wl,--start-group,-lxil,-lgcc,-lc,--end-group
 
+BSP_SRCS=$(wildcard $(BSP_SOURCES)/*.c)
 USER_SOURCES=$(wildcard $(USER_SOURCE)/*.c)
-OBJS=$(USER_SOURCES:.c=.o) 
+OBJS=$(BSP_SRCS:.c=.o) $(USER_SOURCES:.c=.o) 
+TEST=$(BSP_SRCS:.c=.o)
+
 INCLUDES = -I $(BSP_INCLUDES) \
 		   -I $(USER_INCLUDES)
 
 # generated paths by the xsct tool, and 
 # we want to place them to our own paths
 XS_DIR_NAMES := zynqmp_pmufw zynqmp_fsbl hw
+
+# all: $(TARGET).elf 
+all: $(BUILD)/$(PLATFORM) $(TEST)
+	@echo $(TEST)
+	@echo "Build Finished" $(shell date) 
 
 # check if you have arm-gcc in the PATHS and the 
 # correct version and create BUILD directory
@@ -72,44 +75,33 @@ $(BUILD):
 $(BUILD)/$(PLATFORM): $(HW) | $(BUILD)
 	@$(XS) -eval 'platform create -name $(PLATFORM) -out $@/../  -hw $(HW)'; \
 		rm -rf $@/platform.spr; \
-		rm -rf $@/logs; \
-		mkdir $(BSP_INCLUDES) $(BSP_SOURCES) $(BSP_ASM);
-	@cp $(BUILD)/$(PLATFORM)/zynqmp_fsbl/zynqmp_fsbl_bsp/psu_cortexa53_0/include/*.h $(BSP_INCLUDES); 
+		rm -rf $@/logs; mkdir $(BSP_INCLUDES) $(BSP_SOURCES) $(BSP_ASM); 
+	@cp $(BUILD)/$(PLATFORM)/zynqmp_fsbl/zynqmp_fsbl_bsp/psu_cortexa53_0/include/*.h $(BSP_INCLUDES);
 	@cp $(BUILD)/$(PLATFORM)/zynqmp_fsbl/zynqmp_fsbl_bsp/psu_cortexa53_0/libsrc/**/src/*.h $(BSP_INCLUDES);
 	@cp $(BUILD)/$(PLATFORM)/zynqmp_fsbl/zynqmp_fsbl_bsp/psu_cortexa53_0/libsrc/**/src/*.c $(BSP_SOURCES);
 	@cp $(BUILD)/$(PLATFORM)/zynqmp_fsbl/zynqmp_fsbl_bsp/psu_cortexa53_0/libsrc/**/src/*.S $(BSP_ASM);
 
 $(BSP_SOURCES)/%.o: $(BSP_SOURCES)/%.c
 	@echo 'Building file: $<'
-	aarch64-none-elf-gcc -I $(BSP_INCLUDES) -c -g -Wall -Wextra \
+	$(CC) -I $(BSP_INCLUDES) -c -g -Wall -Wextra \
 		-fno-tree-loop-distribute-patterns \
 		-Os -flto -ffat-lto-objects -I $(BSP_INCLUDES) -MMD -MP $< -o $@ 
 	@echo 'Finished building: $<'
 
 $(USER_SOURCE)/%.o: $(USER_SOURCE)/%.c
 	@echo 'Building file: $<'
-	@echo 'Invoking: ARM v8 32 Bit gcc compiler'
-	arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"$@" \
-		-march=armv7-a -mfpu=vfpv3 -mfloat-abi=hard $(INCLUDES) \
-		-MMD -MP -MF"$(@:%.o=%.d)" -MT"$(@)" -o "$@" "$<"
+	$(CC) -Wall -O0 -g3 -c -fmessage-length=0 $(INCLUDES) -MMD -MP $<  -o $@
 	@echo 'Finished building: $<'
 
-# $(BUILD)/$(PLATFORM) $(LD) $(BSP_OBJS) $(USER_SOURCE)
-$(TARGET).elf: $(OBJS) $(BSP_OBJS) $(LD)
+$(TARGET).elf: $(BUILD)/$(PLATFORM) $(OBJS) $(LD)
 	@echo 'Building target: $@'
-	@echo 'Invoking: ARM v8 32 Bit gcc linker'
-	arm-none-eabi-gcc -march=$(DEVICE) \
-		-mfpu=vfpv3 -mfloat-abi=hard -Wl,-T -Wl,$(LD) -L $(BSP_OBJS) -o $@ \
-		-Wl,--start-group,-lxil,-lgcc,-lc,--end-group
+	$(CC) -Wl,-T -Wl,$(LD) -o $@ $(OBJS)
 	@echo 'Finished building target: $@'
-
-test: $(BUILD)/$(PLATFORM) $(BSP_OBJS) $(OBJS)
-	@echo $(USER_SOURCES)
-	@echo $(OBJS)
-	@echo "THIS IS THE END" 
 
 clean:
 	@rm -rf $(BUILD)
+	@rm -rf $(USER_SOURCE)/*.o
+	@rm -rf $(USER_SOURCE)/*.d
 	@rm -rf .Xil
 
 .PHONY: clean
